# claude-code-pet

./: .gitignore  HANDOVER.md  README.md  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
landing/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
landing/components/: Logos.tsx  PetSprite.tsx
landing/public/pets/boulder/: config.json
landing/public/pets/clawd/: config.json
landing/public/pets/oops/: config.json
landing/public/pets/owlbert/: config.json
landing/public/pets/quacks/: config.json
landing/public/pets/sprout/: config.json
landing/public/pets/voidling/: config.json
src/: audio.js  i18n.js  index.html  main.js  sessions.js  sprites.html  states.js  styles.css  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_listener.rs  hook_sender.rs  hook_setup.rs  main.rs  server.rs  themes.rs
src/locales/: en.json  ko.json
src/themes/boulder/: config.json
src/themes/cat/: config.json
src/themes/codex/: config.json
src/themes/default/: config.json
src/themes/embyr/: config.json
src/themes/fruits/: config.json
src/themes/owlbert/: config.json
src/themes/quacks/: config.json
src/themes/sprout/: config.json
src/themes/stax/: config.json
src/themes/voidling/: config.json
tools/: capture-docs.mjs  gen-pet-pack.mjs  gen-pixel-theme.mjs
tools/event-check/: server.mjs
