[package]
name = "claude-code-pet"
version = "0.3.1"
edition = "2021"
description = "A lightweight desktop pet that reacts to local coding agents in real time"
license = "MIT"
authors = ["ahfoysal"]
repository = ""

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "time"] }
dirs = "6"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
