[package]
name = "claude-code-pet"
version = "1.0.1"
edition = "2021"
description = "Claude Code Pet — a pixel desktop companion that reacts to Claude Code in real time"
license = "MIT"
authors = ["ahfoysal"]
repository = "https://github.com/ahfoysal/claude-code-pet"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "time"] }
dirs = "6"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
